--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,14 +15,15 @@ header{
     flex-wrap: wrap;
     align-items: flex-start;
 }
-.view-high-scores{
-    color: purple;
+#view-high-scores{
+    color: white;
+    background-color: purple;
 }
 
-.view-high-scores a{
+/* .view-high-scores a{
     color: inherit;
     text-decoration: none;
-}
+} */
 
 main{
     display: flex;
@@ -30,7 +31,35 @@ main{
     flex-wrap: wrap; 
     flex-direction: column;
 }
+#question-list{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+#question-text{
+    text-align: center;
+}
+#opening-page, #question-list, #closing-page, #high-scores {
+    text-align: center;
+}
+#answer-body{
+    flex: 1 100%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
 
+}
+#btn1, #btn2, #btn3, #btn4{
+    display: block;
+    
+    
+    flex: 1 100%;
+    text-align: center;
+    padding: 20px;
+    margin: 20px;
+}
 
 
 .btn {
